z-index issues fixed

--- a/css/main.css
+++ b/css/main.css
@@ -334,9 +334,10 @@ h1, h2 {
  position: absolute;
  top: 70px;
  left: -100px;
- z-index: 100;
+ /* z-index: 100; */
 
 }
+
 
 .latest-posts-title {
  display: inline;
@@ -445,6 +446,7 @@ cursor: pointer;
     background-color: #fff;
     transform:scale(1.1);
     box-shadow: 0 2px 30px -3px rgba(00,00,00,.4);
+
 }
 
 
